consegui criar uma tabela responsiva

--- a/projetos.html
+++ b/projetos.html
@@ -19,8 +19,8 @@
       <h1>Meus Projetos:</h1>
     </header>
 
-    <div class="table-container">
-      <table id="table-projetos">
+    <div class="container-table">
+      <table>
         <thead>
           <tr>
             <th>Nome do Projeto</th>
@@ -42,6 +42,11 @@
           <tr>
             <td>Projeto 3</td>
             <td>Descrição detalhada do Projeto 3.</td>
+            <td>2024</td>
+          </tr>
+          <tr>
+            <td>Projeto 4</td>
+            <td>Descrição detalhada do Projeto 4.</td>
             <td>2024</td>
           </tr>
         </tbody>
