adicionei dados na tabela

--- a/projetos.html
+++ b/projetos.html
@@ -25,6 +25,7 @@
           <tr>
             <th>Nome do Projeto</th>
             <th>Descrição</th>
+            <th>Tecnológias</th>
             <th>Ano</th>
           </tr>
         </thead>
@@ -32,21 +33,25 @@
           <tr>
             <td>Projeto 1</td>
             <td>Descrição detalhada do Projeto 1.</td>
+            <td>html, css</td>
             <td>2024</td>
           </tr>
           <tr>
             <td>Projeto 2</td>
             <td>Descrição detalhada do Projeto 2.</td>
+            <td>html, css</td>
             <td>2024</td>
           </tr>
           <tr>
             <td>Projeto 3</td>
             <td>Descrição detalhada do Projeto 3.</td>
+            <td>html, css</td>
             <td>2024</td>
           </tr>
           <tr>
             <td>Projeto 4</td>
             <td>Descrição detalhada do Projeto 4.</td>
+            <td>html, css</td>
             <td>2024</td>
           </tr>
         </tbody>
