adicionei uma div com varios cards

--- a/index.html
+++ b/index.html
@@ -22,6 +22,33 @@
       <h2>Desenvolvedor Fron-end</h2>
     </header>
 
+    <div class="logo-grid">
+      <div class="imagem">
+        <img src="img-ico/html5.png" alt="ligo html" class="img" />
+        <p class="textlogo">HTML5</p>
+      </div>
+      <div class="imagem">
+        <img src="img-ico/CSS3.png" alt="logo css" class="img" />
+        <p class="textlogo">CSS3</p>
+      </div>
+      <div class="imagem">
+        <img src="img-ico/java-script.png" alt="logo js" class="img" />
+        <p class="textlogo">JavaScript</p>
+      </div>
+      <div class="imagem">
+        <img src="img-ico/bootstrap-img.png" alt="logo bootstrap" class="img" />
+        <p class="textlogo">Bootstrap</p>
+      </div>
+      <div class="imagem">
+        <img src="img-ico/git.webp" alt="logo git" class="img" />
+        <p class="textlogo">Git</p>
+      </div>
+      <div class="imagem">
+        <img src="img-ico/gimp-img.png" alt="logo gimp" class="img" />
+        <p class="textlogo">Gimp</p>
+      </div>
+    </div>
+
     <main>
       <article>
         <p>
