finalizei o home e sobre do projeto

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
       <div class="imagem">
         <img src="img-ico/gimp-img.png" alt="logo gimp" class="img" />
-        <p class="textlogo">Gimp</p>
+        <p class="textlogo">GiMP</p>
       </div>
     </div>
 
@@ -58,16 +58,6 @@
         </p>
       </article>
     </main>
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
     <br />
     <br />
     <br />
