--- a/sobre.html
+++ b/sobre.html
@@ -51,6 +51,13 @@
       </article>
     </main>
 
+    <div class="box-cv">
+      <div class="cv">
+        <img src="img-ico/CURRICULUM-ICON.png" alt="logo cv" class="imgcv" />
+        <a class="textcv" href="pdf/pdf00001.pdf" download> BAIXAR CV</a>
+      </div>
+    </div>
+
     <!--rodapé do projeto, contem os direitos do autor-->
     <footer>
       <p>&copy;MARLON. Todos os direitos reservados</p>
