melhorei a minha tabela

--- a/projetos.html
+++ b/projetos.html
@@ -16,17 +16,17 @@
     </nav>
 
     <header>
-      <h1>Meus Projetos:</h1>
+      <h1 class="projetos">Meus Projetos:</h1>
     </header>
 
     <div class="container-table">
       <table>
         <thead>
           <tr>
-            <th>Nome do Projeto</th>
-            <th>Descrição</th>
-            <th>Tecnológias</th>
-            <th>Ano</th>
+            <th scope="col">Nome do Projeto</th>
+            <th scope="col">Descrição</th>
+            <th scope="col">Tecnológias</th>
+            <th scope="col">Ano</th>
           </tr>
         </thead>
         <tbody>
