adicionei algumas novos efeitos as imagens

--- a/contato.html
+++ b/contato.html
@@ -33,7 +33,11 @@
     <!--links para minhas redes sociais-->
     <ul class="social-links">
       <li>
-        <img src="img/icone-linkedin.png" alt="imagem do linkedim" />
+        <img
+          class="social-link"
+          src="img/icone-linkedin.png"
+          alt="imagem do linkedim"
+        />
         <a
           href="https://www.linkedin.com/in/kaique-marlon-80580b33a/"
           target="_blank"
@@ -45,7 +49,11 @@
     <!--links para minhas redes sociais-->
     <ul class="social-links">
       <li>
-        <img src="img/icone-instagram.png" alt="imagem do instagram" />
+        <img
+          class="social-link"
+          src="img/icone-instagram.png"
+          alt="imagem do instagram"
+        />
         <a href="https://www.instagram.com/kmarlon_21/" target="_blank"
           >Instagram</a
         >
@@ -55,7 +63,11 @@
     <!--links para minhas redes sociais-->
     <ul class="social-links">
       <li>
-        <img src="img/icone-github.png" alt="imagem do github" />
+        <img
+          class="social-link"
+          src="img/icone-github.png"
+          alt="imagem do github"
+        />
         <a href="https://github.com/Kmarlon21" target="_blank">GitHub</a>
       </li>
     </ul>
