adicionei cards no projeto

--- a/projetos.html
+++ b/projetos.html
@@ -58,15 +58,26 @@
       </table>
     </div>
 
-    <article>
-      <aside>
-        <ul>
-          <li><a href="">link</a> - nome projeto</li>
-          <li><a href="">link</a> - nome projeto</li>
-          <li><a href="">link</a> - nome projeto</li>
-        </ul>
-      </aside>
-    </article>
+    <section id="project" class="projectst">
+      <div class="container-pj">
+        <h2>Meus Projetos</h2>
+        <div class="projetos">
+          <div class="projeto">
+            <img src="img/wallpaper_quarto.avif" alt="" />
+            <h3>Projeto 1</h3>
+
+            <a href="#" target="_blank">Deploy</a>
+            <a href="#" target="_blank">GitHub</a>
+          </div>
+          <div class="projeto">
+            <img src="img/wallpape_fundo.jpg" alt="" />
+            <h3>Projeto 2</h3>
+            <a href="#" target="_blank">Deploy</a>
+            <a href="#" target="_blank">GitHub</a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!--rodapé do projeto, contem os direitos do autor-->
     <footer>
