reajustei as pastas do projeto

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/style/style.css" />
   </head>
   <body>
     <!--navbar de navegação -->
     <nav>
       <a href="index.html">Home</a>
-      <a href="sobre.html">Sobre</a>
-      <a href="projetos.html">Projetos</a>
-      <a href="contato.html">Contatos</a>
+      <a href="src/pages/sobre.html">Sobre</a>
+      <a href="src/pages/projetos.html">Projetos</a>
+      <a href="src/pages/contato.html">Contatos</a>
     </nav>
 
     <!--descrição inicial do projeto-->
@@ -24,27 +24,31 @@
 
     <div class="logo-grid">
       <div class="imagem">
-        <img src="img-ico/html5.png" alt="ligo html" class="img" />
+        <img src="/src/assets/img/html5.png" alt="ligo html" class="img" />
         <p class="textlogo">HTML5</p>
       </div>
       <div class="imagem">
-        <img src="img-ico/CSS3.png" alt="logo css" class="img" />
+        <img src="/src/assets/img/CSS3.png" alt="logo css" class="img" />
         <p class="textlogo">CSS3</p>
       </div>
       <div class="imagem">
-        <img src="img-ico/java-script.png" alt="logo js" class="img" />
+        <img src="/src/assets/img/java-script.png" alt="logo js" class="img" />
         <p class="textlogo">JavaScript</p>
       </div>
       <div class="imagem">
-        <img src="img-ico/bootstrap-img.png" alt="logo bootstrap" class="img" />
+        <img
+          src="/src/assets/img/bootstrap-img.png"
+          alt="logo bootstrap"
+          class="img"
+        />
         <p class="textlogo">Bootstrap</p>
       </div>
       <div class="imagem">
-        <img src="img-ico/git.webp" alt="logo git" class="img" />
+        <img src="/src/assets/img/git.webp" alt="logo git" class="img" />
         <p class="textlogo">Git</p>
       </div>
       <div class="imagem">
-        <img src="img-ico/gimp-img.png" alt="logo gimp" class="img" />
+        <img src="/src/assets/img/gimp-img.png" alt="logo gimp" class="img" />
         <p class="textlogo">GiMP</p>
       </div>
     </div>
