--- a/src/pages/contato.html
+++ b/src/pages/contato.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contatos</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/src/style/style.css" />
   </head>
   <body>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="sobre.html">Sobre</a>
-      <a href="projetos.html">Projetos</a>
-      <a href="contato.html">Contatos</a>
+      <a href="/index.html">Home</a>
+      <a href="/src/pages/sobre.html">Sobre</a>
+      <a href="/src/pages/projetos.html">Projetos</a>
+      <a href="/src/pages/contato.html">Contatos</a>
     </nav>
 
     <!--caixinha para enviar mensagem diretamente no email-->
@@ -35,7 +35,7 @@
       <li>
         <img
           class="social-link"
-          src="img/icone-linkedin.png"
+          src="/src/assets/img/icone-linkedin.png"
           alt="imagem do linkedim"
         />
         <a
@@ -51,7 +51,7 @@
       <li>
         <img
           class="social-link"
-          src="img/icone-instagram.png"
+          src="/src/assets/img/icone-instagram.png"
           alt="imagem do instagram"
         />
         <a href="https://www.instagram.com/kmarlon_21/" target="_blank"
@@ -65,7 +65,7 @@
       <li>
         <img
           class="social-link"
-          src="img/icone-github.png"
+          src="/src/assets/img/icone-github.png"
           alt="imagem do github"
         />
         <a href="https://github.com/Kmarlon21" target="_blank">GitHub</a>
