--- a/src/pages/projetos.html
+++ b/src/pages/projetos.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projetos</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/src/style/style.css" />
   </head>
   <body>
     <!--navbar de navegação -->
     <nav>
-      <a href="index.html">Home</a>
-      <a href="sobre.html">Sobre</a>
-      <a href="projetos.html">Projetos</a>
-      <a href="contato.html">Contatos</a>
+      <a href="/index.html">Home</a>
+      <a href="/src/pages/sobre.html">Sobre</a>
+      <a href="/src/pages/projetos.html">Projetos</a>
+      <a href="/src/pages/contato.html">Contatos</a>
     </nav>
 
     <header>
