--- a/src/pages/sobre.html
+++ b/src/pages/sobre.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sobre</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/src/style/style.css" />
   </head>
   <body>
     <!--navbar de navegação -->
     <nav>
-      <a href="index.html">Home</a>
-      <a href="sobre.html">Sobre</a>
-      <a href="projetos.html">Projetos</a>
-      <a href="contato.html">Contatos</a>
+      <a href="/index.html">Home</a>
+      <a href="/src/pages/sobre.html">Sobre</a>
+      <a href="/src/pages/projetos.html">Projetos</a>
+      <a href="/src/pages/contato.html">Contatos</a>
     </nav>
 
     <!--descrição inicial do projeto-->
     <header>
       <h1>Sobre mim:</h1>
-      <img src="img/Izumi_Miyamura.webp" alt="minha foto perfil" />
+      <img src="/src/assets/img/Izumi_Miyamura.webp" alt="minha foto perfil" />
     </header>
 
     <main class="texto2">
