fiz mudanças na navbar

--- a/src/pages/sobre.html
+++ b/src/pages/sobre.html
@@ -13,6 +13,7 @@
       <a href="/src/pages/sobre.html">Sobre</a>
       <a href="/src/pages/projetos.html">Projetos</a>
       <a href="/src/pages/contato.html">Contatos</a>
+      <a href="" download="CV_Marlon">CV</a>
     </nav>
 
     <!--descrição inicial do projeto-->
@@ -50,13 +51,6 @@
         </p>
       </article>
     </main>
-
-    <div class="box-cv">
-      <div class="cv">
-        <img src="img-ico/CURRICULUM-ICON.png" alt="logo cv" class="imgcv" />
-        <a class="textcv" href="pdf/pdf00001.pdf" download> BAIXAR CV</a>
-      </div>
-    </div>
 
     <!--rodapé do projeto, contem os direitos do autor-->
     <footer>
