--- a/src/pages/projetos.html
+++ b/src/pages/projetos.html
@@ -13,6 +13,7 @@
       <a href="/src/pages/sobre.html">Sobre</a>
       <a href="/src/pages/projetos.html">Projetos</a>
       <a href="/src/pages/contato.html">Contatos</a>
+      <a href="" download="CV_Marlon">CV</a>
     </nav>
 
     <header>
